# EWB-Hackathon-Streets

./: CONTRIBUTING.md  LICENSE  README.md  Unbenanntes Diagramm.drawio  docker-compose.yml  pyproject.toml
.github/: info.md
.github/ISSUE_TEMPLATE/: contri_good_practice.yml
.github/workflows/: pylint.yml
assets/: info.md
config/: .env.example
data/: README.md
data/Bayern/: verkehrslinie-Garching-Basemap-by-kennung.geojson  verkehrslinie-Garching-Basemap-by-region.geojson
data/processed/Berlin/: AMY_2010_2022_2020.TMY3.txt  MierendorffInsel_meteonorm_Hay_pv_potential.csv  info.md
data/processed/Garching/: Garching_streets.qgz  boundries_garching.geojson  verkehrslinie_garching_kennung_select.geojson  verkehrslinie_garching_spatial_select..qmd  verkehrslinie_garching_spatial_select.geojson
data/raw/Bayern/: garching.geojson  info.md
docs/: data_sources_qgis.md  good_practice.md  style_guide.md
scripts/: Basemap-Garching-Streets.ipynb  Checking-basemap-data-by-kennung-and-region.ipynb  fetch_garching_osmnx.py  fetch_garching_osmnx_overpass.py  gpkg2Verkehrslinien-geojson.ipynb
src/datapipeline/: info.md
src/pv_potential/: info.md
