[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'EWB-Hackathon'
version = '0.1'
authors = [
    {name = "Felix Rehmann"},
]
description = "EWB-Hackathon. A platform to solve issues in energy and geodate, connect researchers and practitioners, and disseminate knowledge."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: Release to manufacturing (RTM)", # see https://en.wikipedia.org/wiki/Software_release_life_cycle
    "License :: MIT",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = [

]

# root folder of the python/django not found automatically
[tool.setuptools.packages.find]
where = ["."]
#include = ["pkg*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "sphinx",
    "myst-parser",
    "deepl",
]
test = [
    "coverage[toml] ==7.4", # [toml] not needed using micromanba, maybe also new python version
    "xlsxwriter",
]

[tool.pylint]
ignore-patterns = [
  "000*",
  "manage.py",
  "__init__.py",
  "test*",
  "src/pages/views.py",
]


[tool.pylint.format]
max-line-length = 80

[tool.pylint.basic]
variable-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"


[tool.black]
line-length = 80
